navbar n footer done

--- a/css/style2.css
+++ b/css/style2.css
@@ -10,6 +10,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     height: 630px;
+    /* clip-path: ellipse(87% 100% at 50.37% 0%); */
 }
 
 #container_1{
@@ -48,6 +49,7 @@
     border-radius: 7px;
     font-size: 1.3rem;
     cursor: pointer;
+    border: none;
 }
 
 @media screen and (max-width:950px) {
@@ -63,15 +65,83 @@
     }
 
     #container_1 h1 {
-        font-size: 2.4rem;
+        font-size: 2rem;
+    }
+
+    #container_1 p {
+        font-size: 1.5rem;
     }
 
     #container_1 button {
-        width: 55%;
+        width: 60%;
         margin: 4% auto;
+        font-size: 1.5rem;
+        padding: 3%;
     }
 
     #section_1 {
         height: 500px;
+    }
+}
+
+/* section 2 */
+
+#section_2 {
+    background:linear-gradient(to right ,#B3E5FC,#E1F5FE);
+}
+
+#section_2 div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    height: 300px;
+    width: 65%;
+    margin: 0 auto;
+}
+
+#section_2 h1 {
+    font-size: 3.5rem;
+}
+
+#section_2 p {
+    margin: 4% 0;
+    font-size: 1.3rem;
+}
+
+#section_2 a {
+    text-decoration: none;
+    background-color: cornflowerblue;
+    border: none;
+    color: whitesmoke;
+    width: 40%;
+    margin: 0 auto;
+    font-size: 1.5rem;
+    padding: 1% 2%;
+    border-radius: 7px;
+}
+
+@media screen and (max-width:850px) {
+    #section_2 div {
+        width: 90%;
+    }
+}
+
+@media screen and (max-width:600px) {
+    #section_2 div {
+        padding: 40% 0;
+    }
+
+    #section_2 h1 {
+        font-size: 2rem;
+    }
+
+    #section_2 p {
+        font-size: 1.5rem;
+    }
+
+    #section_2 a {
+        padding: 3%;
+        width: 80%;
     }
 }
