--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,5 +1,24 @@
 @import url('https://fonts.googleapis.com/css2?family=Cinzel&display=swap');
 
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track  */
+::-webkit-scrollbar-track {
+  background: #b2ebf2;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #26c6da;
+}
+
+/* Handle on hover  */
+::-webkit-scrollbar-thumb:hover {
+  background: #00acc1;
+}
+
 #navbar {
   width: 100%;
   background: linear-gradient(to right, #e1f5fe, #eceff1);
