--- a/css/style1.css
+++ b/css/style1.css
@@ -10,6 +10,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     height: 600px;
+    margin-top: 5%;
 }
 
 #container_1{
@@ -56,6 +57,10 @@
         margin: auto;
     }
 
+    #section_1 {
+        padding-top:10% ;
+    }
+
     #container_1 h1 {
         font-size: 2.4rem;
     }
@@ -66,9 +71,112 @@
     }
 }
 
+/* section 3 */
+
 #section_3 {
-    background-color: rgb(221, 234, 235);
-    /* clip-path: ellipse(72% 100% at 37.9% 0%); */
-    height: 800px;
+    margin: 3% 0;
+}
+
+#section_3_div1 , #section_3_div3 {
+    background-color: rgb(185, 233, 253);
+    box-shadow: 10px 10px 10px gray;
+    border-radius: 15px;
+}
+
+#section_3 div{
+    width: 95%;
+    display: grid;
+    grid-template-columns: repeat(2,50%);
+    margin: 3% auto;
+    padding: 2% 0;
+}
+
+#section_3_div1 div , #section_3_div2 div ,#section_3_div3 div {
+    width: 85%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    font-size: 1.3rem;
+}
+
+#section_3 h1 {
+    font-size: 2.5rem;
+}
+
+#section_3 p {
+    margin: 3% 0;
+}
+
+#section_3_div3 img {
+    border-radius: 8%;
+}
+
+#section_3_div2 i {
+    font-size: 1rem;
+}
+
+#section_3 a ,#section_4 a {
+    text-decoration: none;
+    text-align: center;
+    background-color: cornflowerblue;
+    border: none;
+    color: whitesmoke;
+    
+    width: 60%;
+    margin: 0 auto;
+    font-size: 1.5rem;
+    padding: 1% 2%;
+    border-radius: 7px;
+}
+
+#section_3 img {
+    width: 80%; 
+    margin: auto;    
+}
+
+@media screen and (max-width:700px) {
+    #section_3 div {
+        grid-template-columns: 95%;
+        text-align: center;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    #section_3 div {
+        width: 95%;
+        margin: 10% auto;
+    }
+
+    #section_3 a {
+        width: 80%;
+    }    
+}
+
+/* section 4 */
+
+#section_4 {
+    background: linear-gradient(to right, rgba(119, 200, 233, 0.959),rgba(255, 255, 255, 0.603)),url(../images/member.svg);
+    box-shadow: 10px 10px 50px #e1aaeb;
+    background-repeat: no-repeat;
+    height: 500px;
+    width: 70%;
+    margin: 5% auto;
+    border-radius: 15px;
+}
+
+#section_4 div {
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 10%;
+}
+
+#section_4 h1 {
+    font-size: 2.7rem;
+}
+
+#section_4 p {
+    font-size: 1.5rem;
 }
 
