--- a/css/style1.css
+++ b/css/style1.css
@@ -79,12 +79,12 @@
 
 #section_3_div1 , #section_3_div3 {
     background:linear-gradient(to right ,#a7def8,#f1f6f8);
-    box-shadow: 10px 10px 10px gray;
+    /* box-shadow: 10px 10px 7px gray; */
     border-radius: 15px;
 }
 
 #section_3 div{
-    width: 95%;
+    width: 97%;
     display: grid;
     grid-template-columns: repeat(2,50%);
     margin: 3% auto;
@@ -155,7 +155,7 @@
 
 #section_4 {
     background: linear-gradient(to right, rgba(119, 200, 233, 0.959),rgba(255, 255, 255, 0.603)),url(../images/member.svg);
-    box-shadow: 10px 10px 50px rgb(85, 145, 153);
+    box-shadow: 0px 10px 10px rgb(85, 145, 153);
     background-repeat: no-repeat;
     background-size: cover;
     height: 500px;
