--- a/css/style2.css
+++ b/css/style2.css
@@ -133,6 +133,7 @@
     font-size: 1.5rem;
     padding: 1% 2%;
     border-radius: 7px;
+    cursor: pointer;
 }
 
 @media screen and (max-width:850px) {
@@ -257,6 +258,7 @@
     font-size: 1.5rem;
     padding: 1% 2%;
     border-radius: 7px;
+    cursor: pointer;
 }
 
 #section_3 img {
