--- a/css/style4.css
+++ b/css/style4.css
@@ -148,6 +148,7 @@
     font-size: 1.5rem;
     padding: 1% 2%;
     border-radius: 7px;
+    cursor: pointer;
 }
 
 @media screen and (max-width:700px) {
@@ -227,6 +228,8 @@
     font-size: 1.5rem;
     padding: 1% 2%;
     border-radius: 7px;
+    cursor: pointer;
+
 }
 
 @media screen and (max-width:700px) {
