--- a/css/style1.css
+++ b/css/style1.css
@@ -1,286 +1,398 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 #section_1 {
-    width: 100%;
-    background: url(../images/Wave-1.svg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: 600px;
-    margin-top: 5%;
+  width: 100%;
+  background: url(../images/Wave-1.svg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 600px;
+  margin-top: 5%;
 }
 
-#container_1{
-    display: flex;
-    flex-direction: column;
-    font-size: 1.3rem;
-    margin: 0 4%;
-    padding: 5% 0;
-    width: 60%;
-    text-align: center;
-    /* background-color: rgb(154, 243, 243); */
-    /* margin: auto; */
+#container_1 {
+  display: flex;
+  flex-direction: column;
+  font-size: 1.3rem;
+  margin: 0 4%;
+  padding: 5% 0;
+  width: 60%;
+  text-align: center;
+  /* background-color: rgb(154, 243, 243); */
+  /* margin: auto; */
 }
 
 #container_1 h1 {
-    font-size: 3.3rem;
+  font-size: 3.3rem;
 }
 
-#container_1 ul{
-    list-style: none;
-    display: grid;
-    grid-template-columns: repeat(3,auto);
-    /* margin: auto ; */
+#container_1 ul {
+  list-style: none;
+  display: grid;
+  grid-template-columns: repeat(3, auto);
+  /* margin: auto ; */
 }
 
 #container_1 ul i {
-    color: blueviolet;
+  color: blueviolet;
 }
 
 #container_1 button {
-    border: none;
-    width: 40%;
-    box-shadow: 5px 5px 4px gray;
-    background-color: #d0eefc;
-    margin: 2% auto;
-    padding: 1%;
-    border-radius: 7px;
-    font-size: 1.3rem;
-    cursor: pointer;
+  border: none;
+  width: 40%;
+  box-shadow: 5px 5px 4px gray;
+  background-color: #d0eefc;
+  margin: 2% auto;
+  padding: 1%;
+  border-radius: 7px;
+  font-size: 1.3rem;
+  cursor: pointer;
 }
 
-@media screen and (max-width:800px) {
-    #container_1 {
-        width: 90%;
-        margin: auto;
-    }
+@media screen and (max-width: 800px) {
+  #container_1 {
+    width: 90%;
+    margin: auto;
+  }
 
-    #section_1 {
-        padding-top:10% ;
-    }
+  #section_1 {
+    padding-top: 10%;
+  }
 
-    #container_1 h1 {
-        font-size: 2.4rem;
-    }
+  #container_1 h1 {
+    font-size: 2.4rem;
+  }
 
-    #container_1 button {
-        width: 55%;
-        margin: 4% auto;
-    }
+  #container_1 button {
+    width: 55%;
+    margin: 4% auto;
+  }
 }
 
 /* section 3 */
 
 #section_3 {
-    margin: 3% 0;
+  margin: 3% 0;
 }
 
-#section_3_div1 , #section_3_div3 {
-    background:linear-gradient(to right ,#a7def8,#f1f6f8);
-    /* box-shadow: 10px 10px 7px gray; */
-    border-radius: 15px;
+#section_3_div1,
+#section_3_div3 {
+  background: linear-gradient(to right, #a7def8, #f1f6f8);
+  /* box-shadow: 10px 10px 7px gray; */
+  border-radius: 15px;
 }
 
-#section_3 div{
-    width: 97%;
-    display: grid;
-    grid-template-columns: repeat(2,50%);
-    margin: 3% auto;
-    padding: 2% 0;
+#section_3 div {
+  width: 97%;
+  display: grid;
+  grid-template-columns: repeat(2, 50%);
+  margin: 3% auto;
+  padding: 2% 0;
 }
 
-#section_3_div1 div , #section_3_div2 div ,#section_3_div3 div {
-    width: 85%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    font-size: 1.3rem;
+#section_3_div1 div,
+#section_3_div2 div,
+#section_3_div3 div {
+  width: 85%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  font-size: 1.3rem;
 }
 
 #section_3 h1 {
-    font-size: 2rem;
+  font-size: 2rem;
 }
 
 #section_3 p {
-    margin: 3% 0;
+  margin: 3% 0;
 }
 
 #section_3_div3 img {
-    border-radius: 8%;
+  border-radius: 8%;
 }
 
 #section_3_div2 a {
-    text-decoration: none;
-    color: rgb(83, 83, 253);
-    font-weight: bold;
+  text-decoration: none;
+  color: rgb(83, 83, 253);
+  font-weight: bold;
 }
 
 #section_3_div2 i {
-    font-size: 1rem;
+  font-size: 1rem;
 }
 
-#section_3 button ,#section_4 button {
-    text-decoration: none;
-    text-align: center;
-    background-color: cornflowerblue;
-    border: none;
-    color: whitesmoke;
-    width: 78%;
-    margin: 0 auto;
-    font-size: 1.4rem;
-    padding: 1% 2%;
-    border-radius: 7px;
-    cursor: pointer;
+#section_3 button,
+#section_4 button {
+  text-decoration: none;
+  text-align: center;
+  background-color: cornflowerblue;
+  border: none;
+  color: whitesmoke;
+  width: 78%;
+  margin: 0 auto;
+  font-size: 1.4rem;
+  padding: 1% 2%;
+  border-radius: 7px;
+  cursor: pointer;
 }
 
 #section_3_div1 button {
-    width: 60%;
+  width: 60%;
 }
 
-#section_3 button span:after {
-    content: '\00bb';
-    position: absolute;
-    opacity: 0;
-    top: 0;
-    right: -20px;
-    transition: 0.5s;
-  }
+#section_3 button span:after ,.part_7 button span:after ,#section_4 button span:after {
+  content: "\00bb";
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
 
-  #section_3 button:hover span {
-    padding-right: 25px;
-  }
+#section_3 button:hover span , .part_7 button:hover span , #section_4 button:hover span {
+  padding-right: 25px;
+}
 
-  #section_3 button span {
-    display: inline-block;
-    position: relative;
-    transition: 0.5s;
-  }
+#section_3 button span , .part_7 button span , #section_4 button span {
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
 
-  #section_3 button:hover span:after {
-    right: 0;
-    opacity: 1;
-  }
+#section_3 button:hover span:after ,.part_7 button:hover span:after , #section_4 button:hover span:after {
+  right: 0;
+  opacity: 1;
+}
 
-  #section_3 button:hover i {
-      display: none;
-  }
+#section_3 button:hover i ,.part_7 button:hover i ,#section_4 button:hover i {
+  display: none;
+}
 
 #section_3 img {
-    width: 80%; 
-    margin: auto;    
+  width: 80%;
+  margin: auto;
 }
 
-@media screen and (max-width:700px) {
-    #section_3 div {
-        grid-template-columns: 95%;
-        text-align: center;
-    }
+@media screen and (max-width: 900px) {
+  #section_2 button {
+    width: 70%;
+  }
+
+  #section_3 button , #section_4 button{
+    width: 98%;
+    font-size: 1.3rem;
+    padding: 3% 0;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  #section_3 div {
+    grid-template-columns: 95%;
+    text-align: center;
+  }
+
+  #section_3 button , #section_4 button{
+    padding: 2% 0;
+  }
 }
 
 @media screen and (max-width: 500px) {
-    #section_3 div {
-        width: 97%;
-        margin: 10% auto;
-    }
+  #section_3 div {
+    width: 97%;
+    margin: 10% auto;
+  }
 
-    #section_3 button {
-        font-size: 1.2rem;
-        padding: 2% 0;
-        width: 97%;
-    }    
+  #section_3 button {
+    font-size: 1rem;
+    padding: 2% 0;
+    width: 97%;
+  }
+
 }
+
+
 
 /* section 4 */
 
 #section_4 {
-    background: linear-gradient(to right, rgba(119, 200, 233, 0.959),rgba(255, 255, 255, 0.603)),url(../images/member.svg);
-    box-shadow: 0px 10px 10px rgb(85, 145, 153);
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 500px;
-    width: 65%;
-    margin: 5% auto;
-    border-radius: 15px;
+  background: linear-gradient(
+      to right,
+      rgba(119, 200, 233, 0.959),
+      rgba(255, 255, 255, 0.603)
+    ),
+    url(../images/member.svg);
+  box-shadow: 0px 10px 10px rgb(85, 145, 153);
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 500px;
+  width: 65%;
+  margin: 5% auto;
+  border-radius: 15px;
 }
 
 #section_4 div {
-    width: 80%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding: 10%;
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 10%;
 }
 
 #section_4 h1 {
-    font-size: 2.7rem;
+  font-size: 2.7rem;
 }
 
 #section_4 p {
-    font-size: 1.5rem;
-    margin: 4% 0;
+  font-size: 1.5rem;
+  margin: 4% 0;
 }
 
 #section_4 button {
-    background-color: rgb(46, 117, 248);
-    width: 50%;   
+  background-color: rgb(46, 117, 248);
+  width: 50%;
 }
 
-@media screen and (max-width:1050px) {
-    #section_4 {
-        background-size: contain;
-        height: auto;
-    }
+@media screen and (max-width: 1050px) {
+  #section_4 {
+    background-size: contain;
+    height: auto;
+  }
 
-    #section_4 button {
-        width: 75%;
-        
-    }
-
+  #section_4 button {
+    width: 75%;
+  }
 }
 
-@media screen and (max-width:700px) {
-    #section_4 {
-        width: 80%;
-    }
+@media screen and (max-width: 700px) {
+  #section_4 {
+    width: 80%;
+  }
 
-    #section_4 button {
-        width: 65%;
-    }
+  #section_4 button {
+    width: 65%;
+  }
 
-    #section_4 div {
-        width: 93%;
-    }
+  #section_4 div {
+    width: 93%;
+  }
 
-    #section_4 h1 {
-        font-size: 2.3rem;
-    }
+  #section_4 h1 {
+    font-size: 2.3rem;
+  }
 
-    #section_4 p {
-        font-size: 1.2rem;
-    }
+  #section_4 p {
+    font-size: 1.2rem;
+  }
 }
 
-@media screen and (max-width:550px) {
-    #section_4 {
-        width: 90%;
-        height: 350px;
-    }
+@media screen and (max-width: 550px) {
+  #section_4 {
+    width: 90%;
+    /* height: 300px; */
+  }
 
-    #section_4 p {
-        font-size: 1rem;
-    }
+  #section_4 p {
+    font-size: 1rem;
+  }
 
-    #section_4 button {
-        font-size: 1.4rem;
-    }
+  #section_4 button {
+    font-size: 1rem;
+  }
+
+  #section_4 h1 {
+      font-size: 2rem;
+  }
 }
 
-@media screen and (max-width:450px) {
-    #section_4 div {
-        width: 100%;
-        padding: 17% 4%;
-    }
+@media screen and (max-width: 450px) {
+  #section_4 div {
+    width: 100%;
+    padding: 17% 4%;
+  }
+
+  #section_4 h1 {
+    font-size: 1.7rem;
+  }
 }
+
+/* part_7 */
+
+.part_7 {
+    text-align: center;
+    background: url(../images/wave8.svg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    padding-left: 20%;
+    padding-right: 20%;
+    padding-top: 3rem;
+  }  
+
+.part_7 button {
+  width: 30%;
+  height: 2rem;
+  border: none;
+  outline: none;
+  border-radius: 10px;
+  background-color: #bbdefb;
+  color: #00695c;
+  cursor: pointer;
+}
+
+.part_7 h1 {
+  font-size: 3rem;
+  color: #0d47a1;
+}
+
+.part_7 p,
+.part_7 button {
+  font-size: 1.3rem;
+  margin: 1rem auto;
+}
+
+
+@media screen and (max-width: 1000px) {
+  .part_7 button {
+    width: 60%;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .part_7 h1 {
+    font-size: 2rem;
+  }
+
+  .part_7 p,
+  .part_7 button {
+    font-size: 1rem;
+  }
+
+  .part_7 {
+    padding: 0;
+    padding-top: 6rem;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .part_7 button {
+    width: 50%;
+  }
+}
+
+@media screen and (max-width:300px) {
+    .part_7 button {
+        width: 70%;
+    }
+ }
+
+.logistic {
+  max-height: 100%;
+  max-width: 100%;
+  display: block;
+  margin: 1rem auto;
+}
+
+
