--- a/css/style3.css
+++ b/css/style3.css
@@ -169,9 +169,51 @@
     cursor: pointer;
 }
 
+#section_3 button {
+    width: 80%;
+    padding: 1% 0;
+}
+
+#section_3 button span:after  {
+    content: '\00bb';
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -20px;
+    transition: 0.5s;
+  }
+
+  #section_3 button:hover span{
+    padding-right: 25px;
+  }
+
+  #section_3 button span{
+    display: inline-block;
+    position: relative;
+    transition: 0.5s;
+  }
+
+  #section_3 button:hover span:after{
+    right: 0;
+    opacity: 1;
+  }
+
+  #section_3 button:hover i{
+      display: none;
+  }
+
+
 #section_3 img {
     width: 80%; 
     margin: auto;    
+}
+
+@media screen and (max-width:900px) {
+    #section_3 button {
+        width: 95%;
+        font-size: 1.3rem;
+        padding: 3% 0;
+    }    
 }
 
 @media screen and (max-width:700px) {
@@ -191,11 +233,18 @@
     #section_3_div2 {
         background:linear-gradient(to bottom ,#a7def8,rgba(255, 255, 255, 0.021));
     }
-}
-
-@media screen and (max-width: 500px) {
 
     #section_3 button {
         width: 90%;
-    }    
+        font-size: 1.3rem;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    
+    #section_3 button {
+        width: 97%;
+        font-size: 1rem;
+        padding: 2% 0;
+    }
 }
