--- a/css/style4.css
+++ b/css/style4.css
@@ -300,3 +300,159 @@
         padding: 2% 0;
     }
 }
+
+/* section_5 */
+
+#section_5 {
+    background: linear-gradient(
+        to right,
+        rgba(119, 200, 233, 0.959),
+        rgba(255, 255, 255, 0.603)
+      ),
+      url(../images/member.svg);
+    box-shadow: 0px 10px 10px rgb(85, 145, 153);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 500px;
+    width: 65%;
+    margin: 5% auto;
+    border-radius: 15px;
+  }
+  
+  #section_5 div {
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 10%;
+  }
+  
+  #section_5 h1 {
+    font-size: 2.7rem;
+  }
+  
+  #section_5 p {
+    font-size: 1.5rem;
+    margin: 4% 0;
+  }
+  
+  @media screen and (max-width: 1050px) {
+    #section_5 {
+      background-size: contain;
+      height: auto;
+    }
+  
+  }
+  
+  @media screen and (max-width: 700px) {
+    #section_5 {
+      width: 80%;
+    }
+  
+    #section_5 div {
+      width: 93%;
+    }
+  
+    #section_5 h1 {
+      font-size: 2.3rem;
+    }
+  
+    #section_5 p {
+      font-size: 1.2rem;
+    }
+  }
+  
+  @media screen and (max-width: 550px) {
+    #section_5 {
+      width: 90%;
+      /* height: 300px; */
+    }
+  
+    #section_5 p {
+      font-size: 1rem;
+    }
+  
+    #section_5 h1 {
+        font-size: 2rem;
+    }
+  }
+  
+  @media screen and (max-width: 450px) {
+    #section_5 div {
+      width: 100%;
+      padding: 17% 4%;
+    }
+  
+    #section_5 h1 {
+      font-size: 1.7rem;
+    }
+  }
+  
+/* section 5 button */
+
+  #section_5 button {
+    text-decoration: none;
+    text-align: center;
+    background-color: cornflowerblue;
+    border: none;
+    color: whitesmoke;
+    width: 60%;
+    margin: 0 auto;
+    font-size: 1.4rem;
+    padding: 1% 2%;
+    border-radius: 7px;
+    cursor: pointer;
+}
+
+#section_5 button span:after {
+    content: '\00bb';
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -20px;
+    transition: 0.5s;
+  }
+
+  #section_5 button:hover span {
+    padding-right: 25px;
+  }
+
+  #section_5 button span {
+    display: inline-block;
+    position: relative;
+    transition: 0.5s;
+  }
+
+  #section_5 button:hover span:after {
+    right: 0;
+    opacity: 1;
+  }
+
+  #section_5 button:hover i {
+      display: none;
+  }
+
+@media screen and (max-width:900px) {
+    #section_3 button  {
+        width: 95%;
+        font-size: 1.3rem;
+        padding: 3% 0;
+    }    
+}
+
+@media screen and (max-width:700px) {
+
+    #section_5 button  {
+        width: 80%;
+        font-size: 1.3rem;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    
+    #section_5 button {
+        width: 70%;
+        font-size: 1rem;
+        padding: 2% 0;
+    }   
+}
