--- a/css/style3.css
+++ b/css/style3.css
@@ -135,9 +135,67 @@
     cursor: pointer;
 }
 
+#section_2 button span:after {
+    content: '\00bb';
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -20px;
+    transition: 0.5s;
+  }
+
+  #section_2 button:hover span {
+    padding-right: 25px;
+  }
+
+  #section_2 button span {
+    display: inline-block;
+    position: relative;
+    transition: 0.5s;
+  }
+
+  #section_2 button:hover span:after {
+    right: 0;
+    opacity: 1;
+  }
+
+  #section_2 button:hover i {
+      display: none;
+  }
+
+@media screen and (max-width:900px) {
+    #section_3 button  {
+        width: 95%;
+        font-size: 1.3rem;
+        padding: 3% 0;
+    }    
+}
+
+@media screen and (max-width:700px) {
+
+    #section_2 button  {
+        width: 80%;
+        font-size: 1.3rem;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    
+    #section_2 button {
+        width: 70%;
+        font-size: 1rem;
+        padding: 2% 0;
+    }   
+}
+
+
 @media screen and (max-width:850px) {
     #section_2 div {
         width: 90%;
+    }
+
+    #section_2 button {
+        width: 60%;
     }
 }
 
@@ -153,21 +211,12 @@
     #section_2 p {
         font-size: 1.3rem;
     }
-
-    #section_2 button {
-        padding: 2% ;
-        width: 60%;
-    }
 }
 
 @media screen and (max-width:500px) {
     
     #section_2 div {
         width: 95%;
-    }
-
-    #section_2 button {
-        width: 80%;
     }
 }
 
@@ -187,16 +236,6 @@
         font-size: 1.2rem;
     }
 
-    #section_2 button {
-        width: 65%;
-        padding: 1%;
-    }
-}
-
-@media screen and (max-width:400px) {
-    #section_2 button {
-        width: 80%;
-    }
 }
 
 
