--- a/css/form.css
+++ b/css/form.css
@@ -6,104 +6,143 @@
 }
 
 
-.forms_section{
-    position: fixed; 
-    width: 100%; 
-    height: 100%;
-    top: 0;
-    background-color: rgba(0, 0, 0, 0.7);
-    z-index: 2; 
-    display: none;
-    flex-direction: column;
-    justify-content: center;
-  }
-  
-  
-  .form_title{
-    width: 80%;
-    margin: 1rem auto;
-    display: flex;
-    justify-content: space-between;
-  }
-  
-  /* contact form */
-  
-  .contact{
-    width: 50%;
-    height: 70%;
-    margin:auto;
-    /* padding-bottom: 15% ; */
-    background: linear-gradient(to top,#b2dfdbe3,#B2EBF2e3,#E1F5FEe3);
-    border-radius: 15px;
-    box-shadow: -1px -1px 10px 5px #c9d1d48f;
-    color:#004D40;
-    display: none;
-  }
-  
-  .contact fieldset{
-    width: 60%;
-    height: 15%;
-    margin: 1rem auto;
-    border: 1px solid white;
-  }
-  
-  .contact input{
-    width: 80%;
-    height: 100%;
-    margin: 0 1rem;
-    display: block;
-    font-size: 0.8rem;
-    padding: 1rem auto;
-    border: none;
-    outline: none;
-    background: transparent;
-  }
-  
-  .contact button{
-    display: block;
-    width: 30%;
-    height: 2rem;
-    font-size: 1.2rem;
-    margin:1rem auto;
-    border: none;
-    outline: none;
-    cursor:pointer;
-    background: #b2ebf2;
-  }
-  
-  .contact a{
-    text-decoration: none;
-    color:#0277bd;
-  }
-  
-  .contact i{
-    cursor: pointer;
-  }
+/* forms section */
+
+.forms_section {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: 2;
+  transition: all 0.3s ease;
+  visibility: hidden;
+  opacity: 0;
+}
+
+.forms_section_visible{
+  width: 100%;
+  height: 100%;
+  visibility: visible;
+  opacity: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  transition: all 1s ease;
+}
+
+.form_title {
+  width: 80%;
+  margin: 1rem auto;
+  display: flex;
+  justify-content: space-between;
+}
+
+/* contact form */
+
+.contact {
+  width: 0;
+  height: 0;
+  margin: auto;
+  background: linear-gradient(to top, #b2dfdbe3, #b2ebf2e3, #e1f5fee3);
+  border-radius: 15px;
+  box-shadow: -1px -1px 10px 5px #c9d1d48f;
+  color: #004d40;
+  visibility: hidden;
+  opacity: 0;
+  transition: all 0.7s ease;
+}
+
+.contact_visible{
+  visibility: visible;
+  opacity: 1;
+  height: 30rem;
+  width: 50%;
+  transition: all 0.7s ease;
+}
+
+.contact fieldset {
+  width: 60%;
+  height: 15%;
+  margin: 1rem auto;
+  border: 1px solid white;
+}
+
+.contact legend{
+  margin-left: 1rem;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+.contact input {
+  width: 80%;
+  height: 100%;
+  margin: 0 1rem;
+  display: block;
+  font-size: 0.8rem;
+  padding: 1rem auto;
+  border: none;
+  outline: none;
+  background: transparent;
+}
+
+.contact button {
+  display: block;
+  width: 30%;
+  height: 2.5rem;
+  font-size: 1.2rem;
+  margin: 1rem auto;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  background: #b2ebf2;
+}
+
+.contact a {
+  text-decoration: none;
+  color: #0277bd;
+}
+
+.contact i {
+  cursor: pointer;
+}
+
+.contact center{
+  padding: 0 1rem;
+}
 
   @media screen and (max-width: 1000px) {
-    .contact{
+
+    .contact_visible {
       width: 70%;
-      height: 60%;
+      height: 25rem;
+      visibility: visible;
+      opacity: 1;
+      transition: all 0.7s ease;
     }
   
-    .contact fieldset{
+    .contact fieldset {
       height: 10%;
     }
   }
 
   @media screen and (max-width: 650px) {
-    .contact{
-        width: 80%;
-        height: 60%;
-      }
-    
-      .contact fieldset{
-        width: 80%;
-        height: 13%;
-      }}
+    .contact_visible{
+      opacity: 1;
+      visibility: visible;
+      width: 80%;
+      height: 35rem;
+      transition: all 0.7s ease;
+    }
+  
+    .contact fieldset {
+      width: 80%;
+      height: 15%;
+    }
+  }
 
-  @media screen and (max-width:470px) {
+  /* @media screen and (max-width:470px) {
     .contact {
       height:70%;
     }
-  }
+  } */
