--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,71 +1,35 @@
-@import url('https://fonts.googleapis.com/css2?family=Cinzel&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Cinzel&display=swap");
 
-::-webkit-scrollbar {
-  width: 10px;
-}
-
-/* Track  */
-::-webkit-scrollbar-track {
-  background: #b2ebf2;
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background: #26c6da;
-}
-
-/* Handle on hover  */
-::-webkit-scrollbar-thumb:hover {
-  background: #00acc1;
-}
-
-#navbar {
+.navbar {
   width: 100%;
-  background: linear-gradient(to right, #e1f5fe, #eceff1);
-  box-shadow: -1px -1px 10px #cfd8dc;
   position: fixed;
+  /* height: 3.5rem; */
   top: 0;
+  background: linear-gradient(to right, #B3E5FC,#e1f5fe, #eceff1);
+  box-shadow: -1px -1px 20px #cfd8dc;
+  display: grid;
+  grid-template-columns: repeat(2, 48%);
+  column-gap: 1%;
   z-index: 2;
-}
-
-#navbar a {
-  text-decoration: none;
-  color: black;
-}
-
-.navbar_top {
-  width: 80%;
-  margin: 0 auto;
-  padding: 1% auto;
-  display: flex;
-  justify-content: space-between;
   align-items: center;
 }
 
-.navbar_top h1,
-.navbar_top span,
-.navbar_top button {
-  margin-top: 1%;
+.navbar a {
+  text-decoration: none;
+  color: inherit;
 }
 
-
-.navbar_top h1,.footer h1{
-    font-size: 2rem;
-    font-family: 'Cinzel', serif;
+.navbar_logo h1 {
+  margin-left: 2rem;
 }
 
-.navbar_top button {
-  font-size: 1rem;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  background: inherit;
+.navbar_logo h1,.footer h1{
+  /* font-size: 1rem; */
+  font-family: 'Cinzel', serif;
 }
 
-.navbar_bottom {
-  width: 60%;
-  height: 0.6rem;
-  margin: 1% 5%;
+.navbar_links {
+  width: 100%;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -79,7 +43,7 @@
 .dropdown_content {
   display: none;
   position: absolute;
-  background: #eceff1;
+  background: #e1f5fe;
   width: 10rem;
   list-style: none;
   left: -3rem;
@@ -90,10 +54,6 @@
   margin: 1rem auto;
 }
 
-/* .dropdown_content li:hover {
-  background-color: #bebebe;
-} */
-
 .dropdown:hover .dropdown_content {
   display: block;
 }
@@ -103,44 +63,86 @@
   cursor: pointer;
 }
 
-#overlay {
-  position: fixed; 
+.overlay {
+  position: fixed;
   display: none;
-  width: 100%; 
+  
+}
+
+.overlay_visible{
+  display: block;
+  width: 100%;
   height: 100%;
   top: 0;
-  background-color: rgba(0,0,0,0.5);
-  z-index: 1; 
+  background-color: rgba(0, 0, 0, 0.5);
   cursor: pointer;
+  z-index: 1;
+}
+
+@media screen and (max-width:1000px) {
+    .navbar{
+      grid-template-columns: 25% 75%;
+    }
 }
 
 @media screen and (max-width: 700px) {
-  .navbar_bottom {
-    width: 90%;
+  .navbar {
+    grid-template-columns: 100%;
   }
 }
 
 @media screen and (max-width: 500px) {
-  .navbar_top button {
-    font-size: 0.7rem;
+
+  .navbar{
+    transition: all 0.7s ease;
   }
 
-  .navbar_top h1,.footer h1{
-      font-size: 1.5rem;
+  .navbar_logo {
+    width: 100%;
+    display: grid;
+    grid-template-columns: 30% 70%;
+    align-items: center;
+  }
+
+  .navbar_logo h1 {
+    margin: auto;
+  }
+
+  #hamburger{
+    margin:auto 1rem;
+  }
+
+  .navbar_links {
+    flex-direction: column;
+    opacity: 0;
+    height: 0;
+    visibility: hidden;
+    background: none;
+    transition: all 0.7s ease-out;
+
+  }
+
+  .opac {
+    display: flex;
+    visibility: visible;
+    opacity: 1;
+    flex-direction: column;
+    justify-content: space-evenly;
+    height: 40vh;
+    transition: all 0.7s ease-out;
+    background: inherit;
+  }
+
+  .height60{
+    height: 60vh;
+  }
+
+  .height70{
+    height: 70vh;
   }
 
   #hamburger {
     display: block;
-  }
-
-  .navbar_top {
-    height: 2.5rem;
-  }
-
-  .navbar_bottom {
-    display: none;
-    flex-direction: column;
-    height: 30vh;
   }
 
   .dropdown {
@@ -148,6 +150,7 @@
     width: 80%;
     margin: 0 auto;
     text-align: center;
+    transition: all 0.5s ease;
   }
 
   .dropdown_button {
@@ -156,9 +159,24 @@
   }
 
   .dropdown_content {
+    display: none;
     position: static;
     background: inherit;
     width: 100%;
+    visibility: hidden;
+    opacity: 0;
+    transition: all 0.5s ease;
+  }
+
+  .dropdown_content_visible{
+    display: block;
+    visibility: visible;
+    opacity: 1;
+    transition: all 0.5s ease;
+  }
+
+  .dropdown_content li {
+    margin: 1rem auto;
   }
 
   .dropdown:hover .dropdown_content {
