--- a/css/style2.css
+++ b/css/style2.css
@@ -6,7 +6,8 @@
 
 #section_1 {
     width: 100%;
-    background:linear-gradient(rgba(199, 181, 181, 0.233),rgba(104, 173, 230, 0.329)), url(../images/page2.svg);
+    /* background:linear-gradient(rgba(199, 181, 181, 0.233),rgba(104, 173, 230, 0.329)), url(../images/page2.svg); */
+    background: linear-gradient(to left,rgba(226, 216, 216, 0.116),rgba(85, 172, 243, 0.432)),url(../images/truck.svg);
     background-size: cover;
     background-repeat: no-repeat;
     margin-top: 5%;
@@ -18,8 +19,8 @@
     display: flex;
     flex-direction: column;
     font-size: 1.3rem;
-    margin: 0 13%;
-    padding: 5% 0;
+    margin: 0 14%;
+    padding: 4% 0;
     width: 60%;
     text-align: center;
     /* background-color: rgb(154, 243, 243); */
@@ -39,6 +40,7 @@
 
 #container_1 ul i {
     color: blueviolet;
+    /* color: green; */
 }
 
 #container_1 button {
